--- a/src/app/package.json
+++ b/src/app/package.json
@@ -1,8 +1,8 @@
 {
-    "name": "app",
-    "version": "0.1",
+    "name": "Atlas.app",
+    "version": "3.1.1",
     "main": "main",
     "description": "AGRC Boilerplate",
     "homepage": "https://github.com/agrc/AGRCJavaScriptProjectBoilerPlate",
-    "dojoBuild": "package.js"
+    "dojoBuild": "app.profile.js"
 }
