--- a/.eslintrc
+++ b/.eslintrc
@@ -6,9 +6,7 @@
         "node": true,
         "jquery": true
     },
-    "globals": {
-        "AGRC": true
-    },
+    "globals": {},
     "rules": {
         "no-bitwise": 2,
         "curly": [
