--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "jasmine-jsreporter": "^0.1.2",
     "layer-selector": "agrc-layer-selector#~0.4.0",
     "xstyle": "0.3.2",
-    "dgauges": "*"
+    "dgauges": "*",
+    "seiyria-bootstrap-slider": "~9.3.0"
   },
   "resolutions": {
     "dgrid": "0.3.17/esri-3.14.0",
