--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "slc-solar",
-  "version": "2.0.0-2",
+  "version": "2.0.0",
   "description": "widget for embedding into http://www.solarsimplified.org/solar-resources/solar-map",
   "homepage": "http://www.solarsimplified.org/solar-resources/solar-map",
   "repository": {
