--- a/src/app/package.json
+++ b/src/app/package.json
@@ -1,6 +1,6 @@
 {
     "name": "SLCSolar.app",
-    "version": "2.0.0-2",
+    "version": "2.0.0",
     "main": "main",
     "description": "SLC Solar Map",
     "homepage": "https://github.com/agrc/slc-solar",
